# plt-rs

./: .gitignore  Cargo.toml  Cross.toml  README.md
examples/: dump_plt.rs  hook_getpid.rs  libc_puts.rs
src/: android_view.rs  elf32.rs  elf64.rs  lib.rs  unix_view.rs  unixy.rs
templates/sample_crate/: Cargo.toml
templates/sample_crate/host/: Cargo.toml
templates/sample_crate/host/src/: main.rs
templates/sample_crate/payload/: Cargo.toml
templates/sample_crate/payload/src/: lib.rs
tests/: integration_tests.rs
