[package]
name = "plt-rs"
version = "0.2.0"
edition = "2021"
authors = ["ohchase"]
license = "MIT"
description = "Library for inspecting, analyzing, and instrumenting linux and android applications runtime symbol linkage"
documentation = "https://docs.rs/plt-rs"
readme = "README.md"
repository = "https://github.com/ohchase/plt-rs/"
homepage = "https://github.com/ohchase/plt-rs/"
keywords = ["plt", "elf", "bionic", "linker", "hooking"]
exclude = ["/examples"]

[lib]
crate-type = ["lib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.149"
thiserror = "1.0.49"

[dev-dependencies]
anyhow = "1.0.75"
