[package]
name = "plt-rs"
version = "0.4.0"
edition = "2021"
authors = ["ohchase"]
license = "MIT"
description = "Library for inspecting, analyzing, and instrumenting linux and android applications runtime symbol linkage"
documentation = "https://docs.rs/plt-rs"
readme = "README.md"
repository = "https://github.com/ohchase/plt-rs/"
homepage = "https://github.com/ohchase/plt-rs/"
keywords = ["plt", "elf", "linker", "hook", "symbols"]
exclude = ["/examples"]

[lib]
crate-type = ["lib"]

[dependencies]
libc = "0.2"

[dev-dependencies]
anyhow = "1.0"
